See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.66.00

              pgmramp: add -diagonal.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              libnetpbm: Read functions validate that sample values do not
              exceed maxval.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              libnetpbm: Validate image dimensions are small enough that you
              can allocate a row buffer.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pgmhist: fix buffer overrun with -median.  Always broken.
              -median was new in Netpbm 10.61 (December 2012).

              pnmmargin: fix for size 0 and superfluous "unexpected operator" 
              message with size != 0.  Introduced in 10.42.

              pstopnm: fix wrong interpretations of -xsize and -ysize when
              rendering image in landscape (rotated).  This can appear as
              stretching and squashing.  Probably always broken.

              pstopnm: fix wrong orientation sometimes when you specify
              both -xsize and -ysize.  Introduced in 10.65.

              pgmramp: fix bogus output with really large images.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              ppmrelief: fix out-of-bound values in output.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              ppmrelief: fix crash when input image is too small.  Always
              broken.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pgmtexture: fix buffer overflow.  Always broken.  (Program
              was added in primordial Netpbm in 1991).

              pamdeinterlace: fix incorrect output with -takeodd and image has
              only one row.  Always broken (pamdeinterlace was introduced in
              Netpbm 9.21 (January 2001)).  Thanks Prophet of the Way